z-index fix

--- a/client/src/scss/AddPostModal.scss
+++ b/client/src/scss/AddPostModal.scss
@@ -8,7 +8,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 3;
+  z-index: 5;
 
   div:first-child {
     display: flex;
